<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sec.android.app.weather.WeatherFragment" >

    <TextView
        android:id="@+id/timezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="41dp"
        android:text="@string/timezoneTxt"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timezone"
        android:layout_alignStart="@+id/timezone"
        android:layout_below="@+id/timezone"
        android:layout_marginTop="44dp"
        android:text="@string/weatherTxt"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weather"
        android:layout_alignStart="@+id/weather"
        android:layout_below="@+id/weather"
        android:layout_marginTop="32dp"
        android:text="@string/tempTxt"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temperature"
        android:layout_alignStart="@+id/temperature"
        android:layout_marginTop="32dp"
        android:layout_centerVertical="true"
        android:text="@string/humidityTxt"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/humidity"
        android:layout_alignStart="@+id/humidity"
        android:layout_below="@+id/humidity"
        android:layout_marginTop="32dp"
        android:text="@string/windTxt"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/wind"
        android:layout_alignStart="@+id/wind"
        android:layout_below="@+id/wind"
        android:layout_marginTop="32dp"
        android:text="@string/pressureTxt"
        android:textSize="19sp" />

</RelativeLayout>